<resources>
    <string name="app_name">自由百事通</string>
    <string name="activity_phone_number_attribution_check">查询</string>
    <string name="activity_phone_number_attribution_num">电话号码</string>
    <string name="is_build_ing">正在施工中…</string>
    <string name="check">查看</string>
    <string name="last">上一个</string>
    <string name="next">下一个</string>
    <string name="degrees">&#176;</string>
    <string name="life_index">生活指数:</string>
    <string name="chuanyi">穿衣:</string>
    <string name="ganmao">感冒:</string>
    <string name="kongtiao">空调:</string>
    <string name="xiche">洗车:</string>
    <string name="yundong">运动:</string>
    <string name="ziwaixian">紫外线:</string>
    <string name="air_quality">空气质量:</string>
    <string name="clock">:00</string>

    <string name="pm25_no_values">暂时没有观测值</string>
    <string name="weather_temperature">温度/&#176;C</string>
    <string name="weather_precipitation">雨量/mm</string>
    <string name="delete_page">删除页面</string>
    <string name="weather_big_icon">天气图标大图</string>
    <string name="weather_24_pre">未来24小时预报:</string>
    <string name="temperature_circle">温度圆环</string>
    <string name="precipitation_circle">雨量圆环</string>
    <string name="weather_5_pre">未来五天天气:</string>
    <string name="pm25_0">0</string>
    <string name="pm_50">50</string>
    <string name="pm25_100">100</string>
    <string name="pm25_150">150</string>
    <string name="pm25_200">200</string>
    <string name="pm25_300">300</string>
    <string name="pm25_500">500</string>
    <string name="air_quality_index">空气质量指数:</string>
    <string name="pm2_5">PM2.5:</string>
    <string name="pm10">PM10:</string>
    <string name="suggest">建议:</string>
    <string name="dawn">黎明</string>
    <string name="day">白天</string>
    <string name="night">夜间</string>
    <string name="please_input_correct_identity_num">请输入正确的身份证号码</string>
    <string name="please_input_identity_num">请输入身份证号码</string>
    <string name="identity_card_num">身份证号</string>
    <string name="is_loss">是否挂失</string>
    <string name="is_leak">是否泄漏</string>
</resources>
